# kifaru

kifaru/: Kifaru.dev  Kifaru.layout  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  kifaru.prj  kifaru.pws  mkinstalldirs
kifaru.old/: Kifaru.dev  Kifaru_private.h  audio.cpp  audio.h  effect.cpp  effect.h  inits.cpp  libsmpeg.la  main.cpp  scheduler.cpp  scheduler.h  timer.cpp
kifaru/autom4te.cache/: output.0  traces.0
kifaru/kifaru/: .tm_project.cache  Kifaru.layout  Kifaru_private.rc  Kifaru_private.res  Makefile.win
kifaru/kifaru.xcode/: project.pbxproj
kifaru/src/: CompoundEffect.cpp  CompoundEffect.h  EffectFactory.cpp  EffectFactory.h  Engine.cpp  Engine.h  EngineTest.cpp  EngineTest.h  ImageProcessing.cpp  ImageProcessing.h  Kifaru.cpp  Kifaru.h  Kifaru_private.h  Makefile.am  Makefile.in  ParticleStream.cpp  ParticleStream.h  Script.cpp  Script.h  ScriptParser.cpp  ScriptParser.h  audio.cpp  audio.h  effect.cpp  effect.h  effects.xml  inits.cpp  inits.h  main.cpp  primitives.cpp  primitives.h  scheduler.cpp  scheduler.h  timer.cpp  timer.h  tools.cpp  tools.h
