dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(kifaru,[0.04],[nerve@multihost.no])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_SRCDIR(src/effect.h)
dnl AM_CONFIG_HEADER(src/config.h)


dnl Checks for programs.

AC_PROG_INSTALL
AC_PROG_CXX
AC_PROG_CC 


dnl Checks for libraries.
dnl Check for SDL 
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, 
         :,
	          AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]) 
		  ) 
		  CXXFLAGS="$CXXFLAGS $SDL_CFLAGS" 
		  LIBS="$LIBS $SDL_LIBS -lSDL_mixer -lSDL_image"

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_CHAR_UNSIGNED
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME


dnl Checks for library functions.
AC_FUNC_MEMCMP

AC_CONFIG_FILES([Makefile] 
	        [src/Makefile]) 
AC_OUTPUT
