noinst_PROGRAMS := kifaru
kifaru_SOURCES  := main.cpp effect.cpp audio.cpp scheduler.cpp timer.cpp tinyhml.h
kifaru_SOURCES  += primitives.cpp inits.cpp EffectFactory.cpp ScriptParser.cpp
kifaru_SOURCES	+= CompoundEffect.cpp tools.cpp ImageProcessing.cpp ParticleStream.cpp
kifaru_SOURCES	+= tinyxml.cpp tinystr.cpp tinyxmlerror.cpp tinyxmlparser.cpp
kifaru_SOURCES	+= Engine.cpp EngineTest.cpp
kifaru_LDADD	:= -lSDLmain -lSDL -lSDL_mixer -lSGE -lSDL_image 
kifaru_LDFLAGS	:= -mnocygwin -mcpu=i686 -msse 
